feat: customize searchbar

--- a/src/styles/search.module.scss
+++ b/src/styles/search.module.scss
@@ -2,12 +2,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  min-width: 50%;
-  background-color: #ee2266;
   padding: 0.5rem 0.8rem;
   border-radius: 100px;
   color: #fff;
-  box-shadow: 0.2rem 0.2rem 0.5rem #ccc;
+  border: 1px solid #ffff;
 }
 
 .input {
@@ -15,7 +13,7 @@
   width: 100%;
   border: none;
   outline: none;
-  background-color: #ee2266;
+  background-color: #1E0338;
   color: #fff;
 }
 
