--- a/src/styles/sidebar.module.scss
+++ b/src/styles/sidebar.module.scss
@@ -5,19 +5,24 @@
 .container {
   display: flex;
 	flex-direction: column;
-  align-items: center;
-  justify-content:flex-start ;
+ 	align-items: center;
+  justify-content: flex-start;
 	font-family: 'poppins';
 	color: #ffff;
 	height: 100vh;
 	width: 10%;
 	border-right: #ffff 1px solid;
-	padding: 0 4% 0 4%;
+	padding: 5% 4% 0 4%;
+	font-size: 1rem;
+	//background-color: rgb(13, 241, 13);
 .search {
 		display: flex;
-		//align-items: center;
+		font-weight: 100;
+		//background-color: rgb(255, 0, 34);
+		margin: 10%;
+		align-items: center;
   	justify-content: space-between;
-		//width: 40%;
+		width: 100%;
 		.icon {
 			font-size: 1.5rem;
 		}
