--- a/src/styles/sidebar.module.scss
+++ b/src/styles/sidebar.module.scss
@@ -6,25 +6,53 @@
   display: flex;
 	flex-direction: column;
  	align-items: center;
-  justify-content: flex-start;
-	font-family: 'poppins';
-	color: #ffff;
-	height: 100vh;
+  justify-content: center;
+	height: 80vh;
 	width: 10%;
 	border-right: #ffff 1px solid;
 	padding: 5% 4% 0 4%;
-	font-size: 1rem;
 	//background-color: rgb(13, 241, 13);
-.search {
+	ul {
 		display: flex;
-		font-weight: 100;
-		//background-color: rgb(255, 0, 34);
-		margin: 10%;
-		align-items: center;
-  	justify-content: space-between;
+		flex-direction: column;
 		width: 100%;
-		.icon {
-			font-size: 1.5rem;
+		//background-color: rgb(13, 2, 74);
+		a {
+			display: flex;
+			align-items: center;
+			margin-top: 30%;
+			color: #ffff;
+			width: 100%;
+			text-decoration: none;
+			//background-color: rgb(255, 0, 34);
+      border-radius: 10px;
+      text-align: center;
+      margin-right: 5px;
+			&:visited {
+        text-decoration: none;
+        color: white;
+      }
+      &:hover {
+        background: black;
+      }
+			.nav-active {
+				background-color: #dde454;
+				&:hover {
+					background: #060d2c;
+			}
 		}
-	} 
+			li {
+				margin-left: 10%;
+				height: 100%;
+				font-weight: 100;
+				font-size: 1.1rem;
+				font-family: 'poppins';
+				//background-color: aqua;
+			}
+			.icon {
+				font-size: 1.5rem;
+				//background-color: rgb(251, 255, 4);
+			}
+		}
+	}
 }
